# SVNBackup

CV/: cv.tex
Latex/AttitudeSync/: attitudeSync.tex  coop_att_syn.tex  intro.tex  io_stable.tex  prob_stat.tex  ref_att_trk.tex  reference.bib  summary.tex
Latex/DSS2014/: 9084-13.tex  article.tex  intro.tex  moo.tex  reference.bib  semantic.tex  summary.tex  system.tex
Latex/DemoSlides/: environment.tex  intro.tex  labeling.tex  main.tex  path_execution.tex  planning.tex  prior_info.tex
Latex/ECEN774-ProjProp/: project.tex  reference.bib
Latex/Framework/: Diagram1.dia  demo.docx
Latex/GECCO/: preamble.tex  project.tex  reference.bib  sigproc.bib
Latex/GECCO2015/: iss_pso.tex  pap611.tex  pap611s2.tex  reference.bib
Latex/GP-MOO/: ESSEX.tex  ETH.tex  INRA.tex  TRENTO.tex  UNIPD.tex  gpmoo.tex  reference.bib
Latex/HRI_Pioneer/: extended_abstract.tex
Latex/HomoRRT/: harrt.tex  homorrt.tex  reference.bib
Latex/IEEE SSCI/: intro.tex  iss-pso.tex  iss.tex  reference.bib  related_work.tex  stochastic_analysis.tex
Latex/IEEE-EC/: iss-pso.tex
Latex/IJCAI2015/: ijcai15-160.tex  morrf.tex  nondominance.tex  reference.bib
Latex/ISS_PSO/: appendix2.tex  conclusion.tex  iss-pso.tex  iss.tex  swarm_analysis.tex  sys_model.tex  topology_analysis.tex
Latex/LDA-Graph/: LDA-graph.tex
Latex/MOPP Survey/: project.tex  reference.bib
Latex/MOPSO/: preamble.tex  project.tex  reference.bib
Latex/MOPSO2/: project.tex  reference.bib
Latex/MOPathPlanning/: MOPP.tex  homotopy.tex  intro.tex  moo.tex  reference.bib
Latex/MORRF/: morrf.tex
Latex/MORRF_slides/: algorithm.tex  conclusion.tex  intro.tex  main.tex  problem.tex  rel_work.tex  simulation.tex
Latex/Multi-Objective/: class1.vsd  class2.vsd  parser.dia  preamble.tex  project.tex
Latex/Multi-Objective2/: planningLayer.dia  preamble.tex  project.tex
Latex/PPSN2014/: intro.tex  opt_strategy.tex  ppsn2014-85.tex  related_work.tex
Latex/PSO/: appendix.tex  conclusion.tex  intro.tex  iss.tex  particle.tex  pso.tex  reference.bib  rel_work.tex  swarm.tex  system.tex
Latex/PSO-Conv/: app_mean_model.tex  app_proof_iss_thm.tex  app_proof_lemma1.tex  app_var_model.tex  iss.tex  opt_strategy.tex  preamble.tex  project.tex  reference.bib  related_work.tex  stochastic_analysis.tex  sys_model.tex
Latex/PSO_TEVC/: appendix.tex  conclusion.tex  intro.tex  iss.tex  particle.tex  pso.tex  reference.bib  rel_work.tex  swarm.tex  system.tex
Latex/Qualify/: Magicc_Presentation.tex  appendix.tex  beamerthemeMagicc.sty  intro.tex  main.aux  main.nav  main.out  main.tex  main.toc  problem.tex  simulation.tex  solution.tex  summary.tex
Latex/RRT/: MORRT.tex  RRT.tex
Latex/RSS2015/: morrt.tex  paper_template.tex  reference.bib
Latex/ReadingNote/: OperatorObjectiveFunctionGuidance.docx
Latex/SMC2014/: appendix.tex  infomax.tex  intro.tex  problem.tex  reference.bib  solution.tex  summary.tex  wingman.tex
Latex/Submodularity/: human_constraint.tex  intro.tex  path_planning.tex  problem.tex  result.tex  solution.tex  submodular.tex  submodular_planning.tex  summary.tex
Latex/Summary/: multiobj.docx  wingman.docx
Latex/UCFTripReport/: preamble.tex  project.tex
Learning_code/LearnROS/: couzin_combine.launch  couzin_model.cpp  couzin_model_broadcaster.cpp
Learning_code/moead_mat20120822/: testmop.m
Proj/UR/cdcg/: CMakeLists.txt  cdcg.tex  reference.bib
Proj/UR/cdcg/data/: feature_set.xml  grammar.xml
Proj/UR/cdcg/data/training/: example_0001-1.xml  example_0001.xml  example_0002.xml  example_1001.xml  example_1002.xml
Proj/UR/cdcg/src/: CMakeLists.txt
Proj/UR/cdcg/src/dcg/: CMakeLists.txt  dcg.cc  dcg_demo_cdcg.cc  factor.cc  factor_set.cc
Proj/UR/cdcg/src/dcg/h2sl_cdcg/: dcg.h  factor.h  factor_set.h
Proj/UR/cdcg/src/language/: CMakeLists.txt  phrase.cc
Proj/UR/cdcg/src/language/h2sl_cdcg/: phrase.h
Proj/UR/cdcg/src/llm/: CMakeLists.txt  cllm.cc  feature_ccv.cc  feature_func_kernel.cc  feature_func_kernel_matches_child.cc  feature_func_kernel_matches_child_region.cc  feature_func_kernel_object.cc  feature_product.cc  feature_set.cc  feature_set_cdcg_demo.cc
Proj/UR/cdcg/src/llm/h2sl/: cllm.h  feature_ccv.h  feature_func_kernel_object.h
Proj/UR/cdcg/src/llm/h2sl_cdcg/: ccv.h  feature_ccv.h  feature_func_kernel.h  feature_func_kernel_matches_child.h  feature_func_kernel_matches_child_region.h  feature_func_kernel_object.h  feature_product.h  feature_set.h
Proj/UR/cdcg/src/symbol/: CMakeLists.txt  func_kernel.cc  func_kernel_demo.cc  func_kernel_demo.ggo  grounding_set.cc
Proj/UR/cdcg/src/symbol/h2sl/: func_kernel.h
Proj/UR/cdcg/src/symbol/h2sl_cdcg/: func_kernel.h  grounding_set.h
Proj/UR/cdcg/src/util/: CMakeLists.txt  cllm_train.cc  gui_demo_cdcg.cc  llm_train_cdcg.cc  llm_train_cdcg.ggo
Wingman/WingmanPathPlanning/: WingmanPathPlanning.sln
Wingman/c++/: WingmanPathPlanning.cpp  WingmanPathPlanning.h
Wingman/entropy/: GetEntropy.m  GetNeighbors.m  Hexagonindex2Center.m  InitMap.m  UpdateMap.m  UpdateMapColor.m  WingmanPathPlanning.m
Wingman/matlab/: AddObstacle.m  ComparePath.m  DrawNodeSequenceOnMap.m  FindPathBetweenTwoNodes.m  FindRobotPathKeyNode.m  GeneratePath.m  GeneratePathInMap.m  GetCurveEnergy.m  GetDistance.m  GetExclusiveEnergy.m  GetExternalEnergy.m  GetInternalEnergy.m  GetObstacleEnergy.m  GetTotalEnergy.m  Hexagon.m  InitMap.m  LimitedDepthFirstSearch.m  NextPosition.m  NextPositionWithObstacle.m  PlanRobotPath.m  PlanRobotPathWithDFS.m  PlanRobotPathWithGA.m  Score.m  ScoreGene.m  SelectOnlyLeftWingSide.m  TraverseWithDFS.m  TrimObstacleRegion.m  UpdateMap.m  UpdateMapColor.m  ValidateSequnceContinuous.m  ValidateTolerantDistance.m  WingmanPathPlanning.m
demo/CDF Simulation Code/: Source.cpp  cfd.cpp  solver.cpp  solver.h
demo/CFD/: cfd.cpp
demo/GazeboMonitor/: FileUtils.py  GazeboMonitor.py  MapViewForm.py  MapViewer.py  ObstacleFinder.py  PlannedPathLoader.py  PolygonManager.py  RobotStateReader.py  TurtlebotController.py  TurtlebotManager.py  WorldFileReader.py  house2-00.xml  minPath.xml  readWorldFile.py  (+21 more)
ros_wk/src/foobar/: package.xml
(+2192 files in other folders)
