<package>
  <name>foobar</name>
  <version>0.0.1</version>
  <description>This package provides foo capability.</description>
  <maintainer email="foo@bar.com">MR Foo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
